--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     
     <color name="color_black">#000000</color>
+    <color name="color_white">color_white</color>
 </resources>
