--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,9 @@
     <color name="colorAccent">#D81B60</color>
     
     <color name="color_black">#000000</color>
-    <color name="color_white">color_white</color>
+    <color name="color_white">#ffffff</color>
+    <color name="color_line">#9E9B9B</color>
+
+    <color name="color_transparent">#00000000</color>//透明色
+    <color name="color_blue">#005ab5</color>
 </resources>
